# image_crop

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/image_crop/: image_crop_node.hpp  visibility.h
src/: image_crop.cpp  image_crop_node.cpp
