<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_crop</name>
  <version>1.0.0</version>
  <description>
    A node for cropping image streams.
    Useful for removing black borders, for instance on DIYed ultrawide cameras.
    Or for displaying a specific part of an image, as one can dynamically change the size and location of the crop.
  </description>

  <maintainer email="snaens@snaens.net">Sam (snaens) Pelz</maintainer>

  <license>BSD</license>
  <!--<url type="website">https://index.ros.org/p/image_crop/</url>-->
  <url type="website">https://github.com/Bento-Robotics/image_crop</url>
  <url type="bugtracker">https://github.com/Bento-Robotics/image_crop/issues</url>
  <url type="repository">https://github.com/Bento-Robotics/image_crop</url>
  <author email="snaens@snaens.net">Sam (snaens) Pelz</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>class_loader</build_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
